Bug 472855 - Low free space notification has a generic icon
Summary: Low free space notification has a generic icon
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Notifications (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-07-31 18:56 UTC by Patrick Silva
Modified: 2023-08-01 19:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (63.18 KB, image/png)
2023-07-31 18:56 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-07-31 18:56:07 UTC
Created attachment 160656 [details]
screenshot

STEPS TO REPRODUCE
1. have low free space in /
2. 
3. 

OBSERVED RESULT
the notification with a generic icon seen in the attached screenshot

EXPECTED RESULT
a notification with a proper icon

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2023-08-01 19:08:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knotifications/-/merge_requests/117
Comment 2 Kai Uwe Broulik 2023-08-01 19:16:01 UTC
Git commit 0367d529c61f46142487f8562e77c2c2ef2d81d5 by Kai Uwe Broulik.
Committed on 01/08/2023 at 21:07.
Pushed by broulik into branch 'master'.

Re-introduce IconName fallback to global config

If the event has no icon, try whether the notifyrc has a global icon.
This went missing in the KNotifyConfig cleanup.

M  +3    -0    src/notifybypopup.cpp
M  +3    -0    src/notifybyportal.cpp

https://invent.kde.org/frameworks/knotifications/-/commit/0367d529c61f46142487f8562e77c2c2ef2d81d5