Re-introduce IconName fallback to global config

If the event has no icon, try whether the notifyrc has a global icon.
This went missing in the KNotifyConfig cleanup.

BUG: 472855