src/notifybypopup.cpp
@@ -170,6 +170,9 @@ void NotifyByPopup::getAppCaptionAndIconName(const KNotifyConfig &notifyConfig, 
 
     *iconName = notifyConfig.readEntry(QStringLiteral("IconName"));
     if (iconName->isEmpty()) {
+        *iconName = notifyConfig.readGlobalEntry(QStringLiteral("IconName"));
+    }
+    if (iconName->isEmpty()) {
         *iconName = qGuiApp->windowIcon().name();
     }
     if (iconName->isEmpty()) {
